Clean up credits api (#475)
