# docs/openapi.yaml
@@ -5,9 +5,43 @@ info:
   description: Lotus is an open-core pricing and billing engine. We enable API companies
     to automate and optimize their custom usage-based pricing for any metric.
 paths:
-  /api/balance_adjustments/:
+  /api/batch_create_customers/:
+    post:
+      operationId: api_batch_create_customers_create
+      tags:
+      - api
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
+        required: true
+      security:
+      - knoxTokenAuth: []
+      - OrganizationApiKeyAuth: []
+        TokenAuth: []
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CustomerBatchCreateSuccess'
+          description: ''
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CustomerBatchCreateFailure'
+          description: ''
+  /api/credits/:
     get:
-      operationId: api_balance_adjustments_list
+      operationId: api_credits_list
       description: A simple ViewSet meant only for creating CustomerBalanceAdjustments.
       parameters:
       - in: query
@@ -90,7 +124,7 @@ paths:
                   $ref: '#/components/schemas/CustomerBalanceAdjustment'
           description: ''
     post:
-      operationId: api_balance_adjustments_create
+      operationId: api_credits_create
       description: A simple ViewSet meant only for creating CustomerBalanceAdjustments.
       tags:
       - api
@@ -117,16 +151,15 @@ paths:
               schema:
                 $ref: '#/components/schemas/CustomerBalanceAdjustment'
           description: ''
-  /api/balance_adjustments/{adjustment_id}/update/:
+  /api/credits/{credit_id}/update/:
     post:
-      operationId: api_balance_adjustments_update_create
+      operationId: api_credits_update_create
       description: A simple ViewSet meant only for creating CustomerBalanceAdjustments.
       parameters:
       - in: path
-        name: adjustment_id
+        name: credit_id
         schema:
           type: string
-          format: uuid
         required: true
       tags:
       - api
@@ -152,16 +185,15 @@ paths:
               schema:
                 $ref: '#/components/schemas/CustomerBalanceAdjustment'
           description: ''
-  /api/balance_adjustments/{adjustment_id}/void/:
+  /api/credits/{credit_id}/void/:
     post:
-      operationId: api_balance_adjustments_void_create
+      operationId: api_credits_void_create
       description: A simple ViewSet meant only for creating CustomerBalanceAdjustments.
       parameters:
       - in: path
-        name: adjustment_id
+        name: credit_id
         schema:
           type: string
-          format: uuid
         required: true
       tags:
       - api
@@ -175,40 +207,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CustomerBalanceAdjustment'
-          description: ''
-  /api/batch_create_customers/:
-    post:
-      operationId: api_batch_create_customers_create
-      tags:
-      - api
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/CustomerBatchCreateRequestRequest'
-        required: true
-      security:
-      - knoxTokenAuth: []
-      - OrganizationApiKeyAuth: []
-        TokenAuth: []
-      responses:
-        '201':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CustomerBatchCreateSuccess'
-          description: ''
-        '400':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CustomerBatchCreateFailure'
           description: ''
   /api/customer_feature_access/:
     get:
@@ -1014,35 +1012,35 @@ components:
     BacktestDetail:
       type: object
       properties:
-        end_date:
-          type: string
-          format: date
-        start_date:
-          type: string
-          format: date
-        backtest_name:
-          type: string
-          maxLength: 100
-        backtest_substitutions:
-          type: array
-          items:
-            $ref: '#/components/schemas/BacktestSubstitution'
-        backtest_id:
-          type: string
-        kpis:
-          type: object
-          additionalProperties: {}
-        backtest_results:
-          $ref: '#/components/schemas/AllSubstitutionResults'
         status:
           enum:
           - running
           - completed
           - failed
           type: string
+        kpis:
+          type: object
+          additionalProperties: {}
         time_created:
           type: string
           format: date-time
+        backtest_results:
+          $ref: '#/components/schemas/AllSubstitutionResults'
+        end_date:
+          type: string
+          format: date
+        start_date:
+          type: string
+          format: date
+        backtest_substitutions:
+          type: array
+          items:
+            $ref: '#/components/schemas/BacktestSubstitution'
+        backtest_name:
+          type: string
+          maxLength: 100
+        backtest_id:
+          type: string
       required:
       - backtest_id
       - backtest_name
@@ -1290,6 +1288,27 @@ components:
       - per_day
       - total_cost
       - total_revenue
+    CreditDrawdown:
+      type: object
+      properties:
+        credit_id:
+          type: string
+        amount:
+          type: number
+          format: double
+          maximum: 0
+          minimum: -10000000000
+          exclusiveMinimum: true
+        description:
+          type: string
+          nullable: true
+        applied_at:
+          type: string
+          format: date-time
+      required:
+      - amount
+      - applied_at
+      - credit_id
     Customer:
       type: object
       properties:
@@ -1362,41 +1381,43 @@ components:
     CustomerBalanceAdjustment:
       type: object
       properties:
-        adjustment_id:
+        credit_id:
           type: string
         customer:
-          allOf:
-          - $ref: '#/components/schemas/LightweightCustomer'
-          readOnly: true
+          $ref: '#/components/schemas/LightweightCustomer'
         amount:
           type: number
           format: double
           maximum: 10000000000
-          minimum: -10000000000
+          minimum: 0
           exclusiveMaximum: true
-          exclusiveMinimum: true
-        pricing_unit:
-          allOf:
-          - $ref: '#/components/schemas/PricingUnit'
+        amount_remaining:
+          type: number
+          format: double
+          maximum: 10000000000
+          minimum: 0
+          exclusiveMaximum: true
           readOnly: true
+        currency:
+          $ref: '#/components/schemas/PricingUnit'
         description:
           type: string
+          readOnly: true
           nullable: true
         effective_at:
           type: string
           format: date-time
+          readOnly: true
         expires_at:
           type: string
           format: date-time
+          readOnly: true
           nullable: true
         status:
           enum:
           - active
           - inactive
           type: string
-        parent_adjustment_id:
-          type: string
-          format: uuid
           readOnly: true
         amount_paid:
           type: number
@@ -1405,17 +1426,27 @@ components:
           minimum: -10000000000
           exclusiveMaximum: true
           exclusiveMinimum: true
+          readOnly: true
         amount_paid_currency:
-          allOf:
-          - $ref: '#/components/schemas/PricingUnit'
+          $ref: '#/components/schemas/PricingUnit'
+        drawdowns:
+          type: array
+          items:
+            $ref: '#/components/schemas/CreditDrawdown'
           readOnly: true
       required:
-      - adjustment_id
       - amount
+      - amount_paid
       - amount_paid_currency
+      - amount_remaining
+      - credit_id
+      - currency
       - customer
-      - parent_adjustment_id
-      - pricing_unit
+      - description
+      - drawdowns
+      - effective_at
+      - expires_at
+      - status
     CustomerBalanceAdjustmentCreateRequest:
       type: object
       properties:
@@ -1432,7 +1463,7 @@ components:
           exclusiveMaximum: true
           exclusiveMinimum: true
           writeOnly: true
-        pricing_unit_code:
+        currency_code:
           type: string
           minLength: 1
           writeOnly: true
@@ -1453,18 +1484,16 @@ components:
           type: number
           format: double
           maximum: 10000000000
-          minimum: -10000000000
+          minimum: 0
           exclusiveMaximum: true
-          exclusiveMinimum: true
-          writeOnly: true
         amount_paid_currency_code:
           type: string
           minLength: 1
           writeOnly: true
       required:
       - amount
+      - currency_code
       - customer_id
-      - pricing_unit_code
     CustomerBalanceAdjustmentUpdateRequest:
       type: object
       properties:
@@ -1711,20 +1740,29 @@ components:
     DraftInvoice:
       type: object
       properties:
+        invoice_id:
+          type: string
+        due_date:
+          type: string
+          format: date-time
+          readOnly: true
+          nullable: true
+        end_date:
+          type: string
+          format: date
+          readOnly: true
         line_items:
           type: array
           items:
             $ref: '#/components/schemas/GroupedLineItem'
           readOnly: true
-        currency:
-          $ref: '#/components/schemas/PricingUnit'
+        start_date:
+          type: string
+          format: date
+          readOnly: true
         issue_date:
           type: string
           format: date-time
-          readOnly: true
-        end_date:
-          type: string
-          format: date
           readOnly: true
         cost_due:
           type: number
@@ -1734,17 +1772,8 @@ components:
           exclusiveMaximum: true
           exclusiveMinimum: true
           readOnly: true
-        invoice_id:
-          type: string
-        start_date:
-          type: string
-          format: date
-          readOnly: true
-        due_date:
-          type: string
-          format: date-time
-          readOnly: true
-          nullable: true
+        currency:
+          $ref: '#/components/schemas/PricingUnit'
       required:
       - cost_due
       - currency
@@ -2089,38 +2118,15 @@ components:
     InitialPlanVersionRequest:
       type: object
       properties:
-        description:
-          type: string
-          writeOnly: true
-          nullable: true
-        flat_fee_billing_type:
-          enum:
-          - in_arrears
-          - in_advance
-          type: string
-          writeOnly: true
-        day_anchor:
-          type: integer
-          maximum: 31
-          minimum: 1
-          writeOnly: true
-          nullable: true
-        features:
-          type: array
-          items:
-            $ref: '#/components/schemas/FeatureRequest'
-          nullable: true
-        currency_code:
-          type: string
-          minLength: 1
-        components:
-          type: array
-          items:
-            $ref: '#/components/schemas/PlanComponentRequest'
-          nullable: true
         month_anchor:
           type: integer
           maximum: 12
+          minimum: 1
+          writeOnly: true
+          nullable: true
+        day_anchor:
+          type: integer
+          maximum: 31
           minimum: 1
           writeOnly: true
           nullable: true
@@ -2131,11 +2137,17 @@ components:
           minimum: 0
           exclusiveMaximum: true
           writeOnly: true
-        price_adjustment:
-          $ref: '#/components/schemas/PriceAdjustmentRequest'
-        transition_to_plan_id:
+        flat_fee_billing_type:
+          enum:
+          - in_arrears
+          - in_advance
           type: string
-          format: uuid
+          writeOnly: true
+        components:
+          type: array
+          items:
+            $ref: '#/components/schemas/PlanComponentRequest'
+          nullable: true
         usage_billing_frequency:
           enum:
           - monthly
@@ -2145,6 +2157,23 @@ components:
           - 
           type: string
           writeOnly: true
+          nullable: true
+        transition_to_plan_id:
+          type: string
+          format: uuid
+        currency_code:
+          type: string
+          minLength: 1
+        price_adjustment:
+          $ref: '#/components/schemas/PriceAdjustmentRequest'
+        description:
+          type: string
+          writeOnly: true
+          nullable: true
+        features:
+          type: array
+          items:
+            $ref: '#/components/schemas/FeatureRequest'
           nullable: true
       required:
       - flat_fee_billing_type
@@ -2457,36 +2486,12 @@ components:
     LightweightInvoice:
       type: object
       properties:
-        currency:
-          $ref: '#/components/schemas/PricingUnit'
-        issue_date:
-          type: string
-          format: date-time
-          readOnly: true
-        end_date:
-          type: string
-          format: date
-          readOnly: true
-        cost_due:
-          type: number
-          format: double
-          maximum: 10000000000
-          minimum: -10000000000
-          exclusiveMaximum: true
-          exclusiveMinimum: true
-          readOnly: true
-        invoice_id:
-          type: string
         external_payment_obj_id:
           type: string
           readOnly: true
           nullable: true
-        start_date:
+        invoice_id:
           type: string
-          format: date
-          readOnly: true
-        seller:
-          $ref: '#/components/schemas/Seller'
         external_payment_obj_type:
           enum:
           - stripe
@@ -2498,15 +2503,39 @@ components:
           format: date-time
           readOnly: true
           nullable: true
+        end_date:
+          type: string
+          format: date
+          readOnly: true
+        start_date:
+          type: string
+          format: date
+          readOnly: true
+        issue_date:
+          type: string
+          format: date-time
+          readOnly: true
+        invoice_number:
+          type: string
+          readOnly: true
+        cost_due:
+          type: number
+          format: double
+          maximum: 10000000000
+          minimum: -10000000000
+          exclusiveMaximum: true
+          exclusiveMinimum: true
+          readOnly: true
         payment_status:
           enum:
           - paid
           - unpaid
           type: string
           readOnly: true
-        invoice_number:
-          type: string
-          readOnly: true
+        currency:
+          $ref: '#/components/schemas/PricingUnit'
+        seller:
+          $ref: '#/components/schemas/Seller'
       required:
       - cost_due
       - currency
@@ -2523,12 +2552,20 @@ components:
     LightweightInvoiceLineItem:
       type: object
       properties:
+        plan:
+          allOf:
+          - $ref: '#/components/schemas/LightweightPlanVersion'
+          nullable: true
+          readOnly: true
+        subscription_filters:
+          type: array
+          items:
+            $ref: '#/components/schemas/SubscriptionCategoricalFilter'
+          nullable: true
+          readOnly: true
         name:
           type: string
           maxLength: 100
-        plan:
-          type: string
-          readOnly: true
         end_date:
           type: string
           format: date-time
@@ -2542,13 +2579,6 @@ components:
         start_date:
           type: string
           format: date-time
-        billing_type:
-          enum:
-          - in_arrears
-          - in_advance
-          - 
-          type: string
-          nullable: true
         quantity:
           type: number
           format: double
@@ -2556,12 +2586,13 @@ components:
           minimum: 0
           exclusiveMaximum: true
           nullable: true
-        subscription_filters:
-          type: array
-          items:
-            $ref: '#/components/schemas/SubscriptionCategoricalFilter'
+        billing_type:
+          enum:
+          - in_arrears
+          - in_advance
+          - 
+          type: string
           nullable: true
-          readOnly: true
       required:
       - billing_type
       - end_date
@@ -2624,11 +2655,18 @@ components:
     LightweightSubscriptionRecordRequest:
       type: object
       properties:
+        billing_plan:
+          $ref: '#/components/schemas/LightweightPlanVersionRequest'
+        end_date:
+          type: string
+          format: date-time
+          description: The time the subscription starts. This will be a string in
+            yyyy-mm-dd HH:mm:ss format in UTC time.
         is_new:
           type: boolean
           description: Whether this subscription came from a renewal or from a first-time.
             Defaults to true on creation.
-        end_date:
+        start_date:
           type: string
           format: date-time
           description: The time the subscription starts. This will be a string in
@@ -2636,17 +2674,10 @@ components:
         fully_billed:
           type: boolean
           description: Whether the subscription has been fully billed and finalized.
-        start_date:
-          type: string
-          format: date-time
-          description: The time the subscription starts. This will be a string in
-            yyyy-mm-dd HH:mm:ss format in UTC time.
         auto_renew:
           type: boolean
           description: Whether the subscription automatically renews. Defaults to
             true.
-        billing_plan:
-          $ref: '#/components/schemas/LightweightPlanVersionRequest'
       required:
       - auto_renew
       - billing_plan
@@ -3338,26 +3369,6 @@ components:
         transition_to_plan_id:
           type: string
           format: uuid
-          writeOnly: true
-    PatchedWebhookEndpointRequest:
-      type: object
-      properties:
-        name:
-          type: string
-          nullable: true
-          maxLength: 100
-        webhook_url:
-          type: string
-          minLength: 1
-          maxLength: 100
-        triggers_in:
-          type: array
-          items:
-            enum:
-            - invoice.created
-            - invoice.paid
-            - usage_alert.triggered
-            type: string
           writeOnly: true
     PaymentProviderPostDataRequest:
       type: object
